ontol-compiler/test-cases/error/map/duplicate_unknown_property.on
def foo ()
def bar ()
rel foo 'a': bar
map(
    foo(
        'a': x,
        'a': x, // ERROR duplicate property
        'b': x, // ERROR unknown property
    ),
    bar()
)
